Fix height bug on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,13 @@
 }
 
 @media only screen and (max-width: 700px) {
+  html,
+  body,
+  #root,
+  .App {
+    height: auto;
+  }
+  
   .App {
     flex-direction: column;
   }
